# mpu6050-dmp-ros-raspberry

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: imu_config.yaml
launch/: demo.launch  mpu6050.launch
rviz/: demo.rviz
scripts/: imu_publisher
src/mpu6050_dmp_ros/: MPU6050.py
