<?xml version="1.0"?>

<package format="2">
  <name>mpu6050_dmp_ros</name>
  <version>0.0.1</version>
  <description>Enables a Raspberry Pi to interface with an MPU6050 sensor through I2C, making its motion data available in a ROS topic.</description>
  <maintainer email="apojomovsky@gmail.com">Alexis Pojomovsky</maintainer>

  <license>MIT</license>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
